# barkbadge

./: .gitignore  LICENCE  README.md  code.py  fursona.py  fursona_page.py  home_page.py  media.py  pyproject.toml  state.py  status_page.py
fonts/: bree-24.bdf  bree-32.bdf  ubuntu-18.bdf
tools/: copy.sh  get-mpy.sh  listen.sh
